blueprints/recruitment-agency/salesforce/force-app/main/default/objects/Submission__c/Submission__c.object-meta.xml
<CustomObject>
    <description>One candidate considered for one role. It moves through the placement pipeline from sourced to placed or rejected, and holds the fee earned if the candidate starts.</description>
    <label>Submission</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>