blueprints/recruitment-agency/salesforce/force-app/main/default/objects/Submission__c/fields/Agreed_salary__c.field-meta.xml
<CustomField>
    <fullName>Agreed_salary__c</fullName>
    <description>Annual salary in the accepted offer. The fee is calculated from this.</description>
    <label>Agreed salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>