blueprints/recruitment-agency/salesforce/force-app/main/default/objects/Submission__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Shows every role a candidate has been considered for. The candidate is a Person with type candidate.</description>
    <label>Candidate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Submissions</relationshipLabel>
    <relationshipName>Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>