blueprints/recruitment-agency/salesforce/force-app/main/default/objects/Submission__c/fields/Checks_complete__c.field-meta.xml
<CustomField>
    <fullName>Checks_complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Right to work, references and any required qualification checks are done.</description>
    <label>Checks complete</label>
    <type>Checkbox</type>
</CustomField>