blueprints/recruitment-agency/salesforce/force-app/main/default/objects/Submission__c/fields/Consultant__c.field-meta.xml
<CustomField>
    <fullName>Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The recruiter who owns this candidate on this role.</description>
    <label>Consultant</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Submissions Consultant</relationshipLabel>
    <relationshipName>Submission_Consultant</relationshipName>
    <type>Lookup</type>
</CustomField>