blueprints/recruitment-agency/salesforce/force-app/main/default/objects/Submission__c/fields/Cv_sent_date__c.field-meta.xml
<CustomField>
    <fullName>Cv_sent_date__c</fullName>
    <description>The day the candidate was formally submitted to the client.</description>
    <label>CV sent date</label>
    <type>Date</type>
</CustomField>