blueprints/recruitment-agency/salesforce/force-app/main/default/objects/Submission__c/fields/Fee_amount__c.field-meta.xml
<CustomField>
    <fullName>Fee_amount__c</fullName>
    <description>Fee due for this placement, from agreed salary and the fee percent on the role.</description>
    <label>Fee amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>