blueprints/recruitment-agency/salesforce/force-app/main/default/objects/Submission__c/fields/Interview_date__c.field-meta.xml
<CustomField>
    <fullName>Interview_date__c</fullName>
    <description>The date of the next or most recent client interview.</description>
    <label>Interview date</label>
    <type>Date</type>
</CustomField>