blueprints/recruitment-agency/salesforce/force-app/main/default/objects/Submission__c/fields/Invoice_status__c.field-meta.xml
<CustomField>
    <fullName>Invoice_status__c</fullName>
    <description>Where the placement invoice stands. Invoicing itself happens in the finance system.</description>
    <label>Invoice status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not due</fullName>
            </value>
            <value>
                <fullName>To invoice</fullName>
            </value>
            <value>
                <fullName>Invoiced</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Rebated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>