blueprints/recruitment-agency/salesforce/force-app/main/default/objects/Submission__c/fields/Rejection_reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_reason__c</fullName>
    <description>Why the candidate did not move forward. Required on the rejected stage.</description>
    <label>Rejection reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Skills not a fit</fullName>
            </value>
            <value>
                <fullName>Culture not a fit</fullName>
            </value>
            <value>
                <fullName>Salary mismatch</fullName>
            </value>
            <value>
                <fullName>Candidate withdrew</fullName>
            </value>
            <value>
                <fullName>Accepted another offer</fullName>
            </value>
            <value>
                <fullName>Role filled elsewhere</fullName>
            </value>
            <value>
                <fullName>Failed checks</fullName>
            </value>
            <value>
                <fullName>Offer declined</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>