blueprints/recruitment-agency/salesforce/force-app/main/default/objects/Submission__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lists every candidate considered for the role.</description>
    <label>Role</label>
    <referenceTo>Role__c</referenceTo>
    <relationshipLabel>Submissions</relationshipLabel>
    <relationshipName>Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>