blueprints/recruitment-agency/salesforce/force-app/main/default/objects/Submission__c/fields/Salary_expected__c.field-meta.xml
<CustomField>
    <fullName>Salary_expected__c</fullName>
    <description>Annual salary the candidate expects for this role.</description>
    <label>Salary expected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>