blueprints/recruitment-agency/salesforce/force-app/main/default/objects/Submission__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>How the candidate came to this role. Used to see which channels produce placements.</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Our database</fullName>
            </value>
            <value>
                <fullName>Job board</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Inbound application</fullName>
            </value>
            <value>
                <fullName>Headhunted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>