blueprints/recruitment-agency/salesforce/force-app/main/default/objects/Submission__c/fields/Start_date__c.field-meta.xml
<CustomField>
    <fullName>Start_date__c</fullName>
    <description>The day the candidate starts. The fee is earned on this date and the rebate period runs from it.</description>
    <label>Start date</label>
    <type>Date</type>
</CustomField>