blueprints/recruitment-agency/salesforce/force-app/main/default/objects/Submission__c/validationRules/Gate_placement_offer.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_placement_offer</fullName>
    <active>true</active>
    <description>Stage gate: Placement, Offer and later stages need Agreed salary.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Sourced", 1, "Screened", 2, "Submitted", 3, "Interviewing", 4, "Offer", 5, "Offer accepted", 6, "Placed", 7, 0) &gt;= 5, ISBLANK(Agreed_salary__c))</errorConditionFormula>
    <errorDisplayField>Agreed_salary__c</errorDisplayField>
    <errorMessage>Fill in Agreed salary before moving to Offer.</errorMessage>
</ValidationRule>