blueprints/recruitment-agency/salesforce/force-app/main/default/objects/Submission__c/validationRules/Gate_placement_offer_accepted.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_placement_offer_accepted</fullName>
    <active>true</active>
    <description>Stage gate: Placement, Offer accepted and later stages need Agreed salary, Start date and Checks complete.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Sourced", 1, "Screened", 2, "Submitted", 3, "Interviewing", 4, "Offer", 5, "Offer accepted", 6, "Placed", 7, 0) &gt;= 6, OR(ISBLANK(Agreed_salary__c), ISBLANK(Start_date__c), NOT(Checks_complete__c)))</errorConditionFormula>
    <errorMessage>Fill in Agreed salary, Start date and Checks complete before moving to Offer accepted.</errorMessage>
</ValidationRule>