blueprints/recruitment-agency/salesforce/force-app/main/default/objects/Submission__c/validationRules/Lost_placement_rejected.validationRule-meta.xml
<ValidationRule>
    <fullName>Lost_placement_rejected</fullName>
    <active>true</active>
    <description>Lost reason: Placement, Rejected needs Rejection reason.</description>
    <errorConditionFormula>AND(ISPICKVAL(Stage__c, "Rejected"), ISBLANK(TEXT(Rejection_reason__c)))</errorConditionFormula>
    <errorDisplayField>Rejection_reason__c</errorDisplayField>
    <errorMessage>Fill in Rejection reason before closing this as Rejected.</errorMessage>
</ValidationRule>