blueprints/recruitment-agency/salesforce/force-app/main/default/objects/Submission__c/listViews/Offers_to_close.listView-meta.xml
<ListView>
    <fullName>Offers_to_close</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Start_date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Offer,Offer accepted</value>
    </filters>
    <label>Offers to close</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>