blueprints/recruitment-agency/salesforce/force-app/main/default/objects/Submission__c/listViews/Placements_to_invoice.listView-meta.xml
<ListView>
    <fullName>Placements_to_invoice</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Start_date__c</columns>
    <columns>Invoice_status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Placed</value>
    </filters>
    <filters>
        <field>Invoice_status__c</field>
        <operation>equals</operation>
        <value>To invoice</value>
    </filters>
    <label>Placements to invoice</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>